optimized command excecution